# school_schedule

./: .env_example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  watch.sh
backend/: .dockerignore  .env.docker  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  start-dev.sh
backend/app/: backend_pre_start.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: afceea379f3a_first.py
backend/app/api/api_v1/: classroom.py  messages.py  student_group.py  subject.py  teacher.py  utils.py
backend/app/api/depends/: repository.py
backend/app/core/: auth.py  base.py  config.py  database.py  dependencies.py  depends.py  exceptions.py  logging_config.py  settings.py
backend/app/entities/: __init__.py  base.py
backend/app/entities/_auth/: models.py  services.py
backend/app/entities/auth/: models.py  services.py
backend/app/entities/classroom/: models.py  repository.py  schemas.py  services.py  validators.py
backend/app/entities/relations/: models.py  schemas.py
backend/app/entities/student_group/: models.py  repository.py  schemas.py  services.py  validators.py
backend/app/entities/subject/: models.py  repository.py  schemas.py  services.py  validators.py
backend/app/entities/teacher/: models.py  repository.py  schemas.py  services.py  validators.py
backend/app/entities/user/: services.py
backend/app/entities/users/: models.py  schemas.py  (+1 more)
backend/app/services/: base_manager.py  base_managers.py
backend/app/utils/: case_converter.py  check_db_conn.py  common.py  common_utils.py  create_superuser.py  db_utils.py  inspect.py  pagination.py  router_manager.py  superuser.py
backend/scripts/: prestart.sh
backend/src/: __init__.py  main.py
backend/src/alembic/: env.py
backend/src/backend/: __init__.py  __main__.py
backend/src/core/: config.py  database.py  router_manager.py
backend/src/entities/: __init__.py  base.py
backend/src/fake/: main.py
backend/src/tests/: main.py
backend/src/utils/: case_converter.py  common_utils.py  db_utils.py  superuser.py
(+102 files in other folders)
