[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.13"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "alembic>=1.14.1,<2.0.0",
    "sqladmin (>=0.20.1,<0.21.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "orjson>=3.10.15",
    "passlib>=1.7.4",
    "fastapi[standard]>=0.115.9",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "fastapi-cli>=0.0.7",
    "isort>=6.0.1",
    "ruff>=0.9.10",
]
